src/test/ui/error-codes/E0662.stderr
error[E0662]: input operand constraint contains '='
  --> $DIR/E0662.rs:8:17
   |
LL |               : "=test"("a")
   |                 ^^^^^^^

error: aborting due to previous error

For more information about this error, try `dustc --explain E0662`.
